# polaris-audio-extractor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
audio_extractor/: batch.py  cli.py  config.py  extractor.py  formats.py  identifier.py  progress.py  renamer.py  scanner.py  utils.py
tests/: test_batch.py  test_extractor.py  test_formats.py  test_integration.py  test_renamer.py
