[project]
name = "audio-extractor"
version = "0.1.0"
description = "Extract audio from video files via ffmpeg"
requires-python = ">=3.10"
dependencies = ["tomli-w", "rich", "anthropic"]

[project.optional-dependencies]
dev = ["pytest", "rich", "ruff"]

[project.scripts]
extract-audio = "audio_extractor.cli:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
